--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <small>Qiangdong Liu, <cite title="Source Title">Chairman and CHIEF Executive Officer of JD Group</cite></small>
                 </blockquote>
             </div>
-            <div class="offset-md-2">
+            <div class="offset-md-3">
                 <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1597560789730&di=dcb0dde1d6716b672875aae530897c92&imgtype=0&src=http%3A%2F%2Fwww.kmdj.cn%2Fupload_files%2Fqb_news_%2F142%2F345_20181218151247_r1k6j.jpg" class="img-fluid" alt="" />
             </div>
             </div>
@@ -161,7 +161,7 @@
                         </div>
                         <div class="form-group row">
                             <div class="offset-md-4 col-md-4 text-center display-4 mb-5">
-                                <button type="submit" class="btn  btn-sm btn-success form-control"> Start Your Carrer Life Right Now!</button>
+                                <button type="submit" class="btn  btn-sm btn-success form-control"> Start Your Carrier Life Right Now!</button>
                             </div>
                         </div>
                     </form>
